--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
         <style>
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap');
 </style>
+<script src="https://kit.fontawesome.com/345df20216.js"
+            crossorigin="anonymous" defer></script>
     </head>
     <body>
         <div id="app"></div>
