--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chevron_left,chevron_right,edit_calendar,undo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -10,7 +10,7 @@
       </style>
     <script src="https://kit.fontawesome.com/345df20216.js"
             crossorigin="anonymous" defer></script>
-    <title>Vite App</title>
+    <title>Scala Cinema</title>
   </head>
   <body>
     <div id="app"></div>
